# IMU-Motion-Tracking-Glove

./: .gitignore  .gitmodules  README.md
hardware/: README.md  motion-tracking-glove.3mf
hardware/cad/: battery-case.f3d  mpu-mount .f3z
src/: README.md
src/esp32cam/: esp32cam.ino
src/esp8266/: esp8266.ino
src/flappy_bird/: README.md  bird.py
src/midi-sequencer/: Cargo.toml
src/midi-sequencer/src/: lib.rs  main.rs
src/mtg-flappy_bird/: Cargo.toml
src/mtg-flappy_bird/src/: main.rs
